--- a/fun.html
+++ b/fun.html
@@ -18,6 +18,10 @@
 				<li class="active"><a href="#">Fun</a></li>
 				<li><a href="#">Link</a></li>
 			  </ul>
+			  
+			  <ul class="nav navbar-nav navbar-right">
+				<li><a href="/securitytesting/src/logout.php">Logout</a></li>
+			  </ul>
 			</div><!-- /.navbar-collapse -->
 		  </div><!-- /.container-fluid -->
 		</nav>
